# SingleCore-2018

modules/Bots/: CMakeLists.txt  botpch.h
modules/Bots/playerbot/: ChatFilter.cpp  ChatHelper.cpp  ChatHelper.h  FleeManager.cpp  GuildTaskMgr.cpp  LootObjectStack.cpp  LootObjectStack.h  PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotCommandServer.cpp  PlayerbotDbStore.cpp  PlayerbotFactory.cpp  PlayerbotFactory.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  RandomItemMgr.cpp  RandomItemMgr.h  RandomPlayerbotFactory.cpp  RandomPlayerbotMgr.cpp
modules/Bots/playerbot/strategy/: CustomStrategy.cpp  Engine.cpp  Event.cpp  Event.h  ItemVisitors.h  Queue.cpp  Value.h
modules/Bots/playerbot/strategy/actions/: AcceptDuelAction.h  AcceptInvitationAction.h  AcceptQuestAction.cpp  AcceptResurrectAction.h  AddLootAction.cpp  AddLootAction.h  AreaTriggerAction.cpp  AttackAction.cpp  BankAction.cpp  BuffAction.cpp  BuyAction.cpp  CastCustomSpellAction.cpp  ChangeStrategyAction.cpp  CheckMailAction.cpp  CheckMountStateAction.cpp  ChooseTargetActions.h  DestroyItemAction.cpp  DropQuestAction.cpp  EmoteAction.cpp  EquipAction.cpp  FollowActions.cpp  GoAction.cpp  GossipHelloAction.cpp  GreetAction.cpp  InventoryAction.cpp  LeaveGroupAction.h  ListQuestsActions.cpp  ListSpellsAction.cpp  LogLevelAction.cpp  LootAction.cpp  LootRollAction.cpp  LootStrategyAction.cpp  MovementActions.cpp  OutfitAction.cpp  PassLeadershipToMasterAction.h  QueryItemUsageAction.cpp  QueryItemUsageAction.h  QueryQuestAction.cpp  QuestAction.cpp  QuestAction.h  (+30 more)
modules/Bots/playerbot/strategy/generic/: CastTimeStrategy.cpp
modules/Bots/playerbot/strategy/triggers/: GenericTriggers.cpp  GenericTriggers.h  LootTriggers.cpp
modules/Bots/playerbot/strategy/values/: AoeHealValues.cpp  AoeValues.cpp  Arrow.cpp  AttackerCountValues.cpp  AttackerWithoutAuraTargetValue.cpp  AttackersValue.cpp  AttackersValue.h  CcTargetValue.cpp  CurrentTargetValue.cpp  CurrentTargetValue.h  EnemyHealerTargetValue.cpp  Formations.cpp  GrindTargetValue.cpp  HasTotemValue.h  InvalidTargetValue.cpp  ItemForSpellValue.cpp  ItemUsageValue.cpp  ItemUsageValue.h  LastMovementValue.h  LastSpellCastValue.h  LineTargetValue.cpp  LogLevelValue.h  LootStrategyValue.cpp  NearestCorpsesValue.cpp  NearestFriendlyPlayersValue.cpp  NearestGameObjects.cpp  NearestGameObjects.h  NearestNonBotPlayersValue.cpp  NearestNpcsValue.cpp  NearestUnitsValue.h  NewPlayerNearbyValue.cpp  NewPlayerNearbyValue.h  PartyMemberToDispel.cpp  PartyMemberToHeal.cpp  PartyMemberToResurrect.cpp  PartyMemberValue.cpp  PartyMemberWithoutAuraValue.cpp  PossibleTargetsValue.cpp  RtiTargetValue.h  SpellCastUsefulValue.cpp  (+4 more)
modules/worldengine/nucleus/src/Configuration/: Config.h
modules/worldengine/nucleus/src/Packets/: ByteBuffer.h
src/game/Chat/: Chat.cpp  Chat.h
src/game/DataStores/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/game/Entities/Item/: Item.cpp
src/game/Entities/Object/: Object.cpp  Object.h
src/game/Entities/Player/: Player.cpp  Player.h
src/game/Entities/Unit/: Unit.cpp
src/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/game/Groups/: Group.h
src/game/Handlers/: CharacterHandler.cpp  ChatHandler.cpp
src/game/Quests/: QuestDef.h
src/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.h
src/game/Spells/: Spell.cpp
src/game/World/: World.cpp
src/scripts/: CMakeLists.txt
src/scripts/Commands/: cs_misc.cpp
src/scripts/Northrend/Nexus/Nexus/: boss_ormorok.cpp
src/worldserver/: CMakeLists.txt  Master.cpp
